--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,47 +8,49 @@
         android:required="false" />
     <uses-feature
         android:name="android.software.leanback"
-        android:required="true" />
-
-    <!-- Internet permission and network access permission-->
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-
+        android:required="true" /> <!-- Internet permission and network access permission -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_MEDIA_AUDIO"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.READ_PHONE_NUMBERS" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <application
         android:allowBackup="true"
+        android:banner="@drawable/streamax_banner_ad_black_grey"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ExoPlayer"
-        android:banner="@drawable/streamax_banner_ad_black_grey">
-
+        android:theme="@style/Theme.ExoPlayer">
         <activity
-            android:name=".MainActivity"
-            android:exported="true">
+            android:name=".AudioActivity"
+            android:exported="true"
+            android:screenOrientation="reverseLandscape"/>
+        <activity
+            android:name=".MenuActivity"
+            android:exported="true"
+            android:screenOrientation="reverseLandscape">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
+                <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"
+            android:screenOrientation="reverseLandscape" />
         <activity
             android:name=".TvActivity"
-            tools:ignore="DuplicateActivity"
-            android:exported="true">
-
+            android:exported="true"
+            tools:ignore="DuplicateActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
             </intent-filter>
-
         </activity>
-
-
     </application>
-
-
 
 </manifest>
