--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,7 @@ dependencies {
 
     ///Exoplayer
     implementation 'com.google.android.exoplayer:exoplayer:2.17.1'
+
+    //Android-gif-drawable
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.24'
 }
