--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     //Dependencies added
+    implementation 'androidx.leanback:leanback:1.2.0-alpha02'
 
     ///Exoplayer
     implementation 'com.google.android.exoplayer:exoplayer:2.17.1'
