--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,11 +23,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ExoPlayer">
+
         <activity
             android:name=".LoginActivity"
             android:exported="true"
-            android:screenOrientation="reverseLandscape"
-            android:theme="@style/Theme.Leanback">
+            android:screenOrientation="reverseLandscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -52,7 +52,7 @@
             android:screenOrientation="reverseLandscape"/>
         <activity
             android:name=".LoaderActivity"
-            android:exported="false"
+            android:exported="true"
             android:screenOrientation="reverseLandscape"/>
     </application>
 
